--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -32,7 +32,8 @@ This translocon assembly then threads the chain through the membrane and release
 The overwhelming majority of~\gls{tmp}s use the co-translational method of translocation.
 It has long been understood that this method is essentially the~\gls{srp} recognising and attaching to the nascent peptide chain whilst it is still associated with the ribosome, and the~\gls{srp} then targets the peptide and ribosome to an~\gls{sr} in association with the membrane insertion machinery on the~\gls{er} membrane~\cite{Pool2005, Hessa2005}.
 
-Crystal structures showed the \gls{srp} targets the nascent peptide chain for membrane insertion via a GTPase in both the \gls{srp} and \gls{sr}, that is initially associated with the translocon machinery, coming together to form a complex thus bringing the nascent peptide chain in proximity to the translocon~\cite{Shan2005}.
+Crystal structures showed the \gls{srp} targets the nascent peptide chain for membrane insertion via a GTPase in both the \gls{srp} and the membrane bound translocon associated \gls{sr} ~\cite{Shan2005}.
+the \gls{srp}\--ribosome\--nascent peptide complex associates with the translocon\--\gls{sr} complex thus bringing the nascent peptide chain in proximity to the translocon~\cite{Shan2005}.
 Mutant studies of \gls{srp} revealed key discrete conformational stages~\cite{Shan2005}.
 These are the specific recognition of signal sequences on cargo proteins, the targeting of the package to the membrane, the handing over of the cargo to the translocation machinery all the while maintaining precise spatial and temporal coordination of each molecular event \cite{Saraogi2011}.
 
@@ -59,7 +60,7 @@ The journey of the \gls{tmh} through this machinery has been studied using both 
         The ribosome is made of two elements; 60s and 40s.
         These vary in composition and size between eukaryotes and prokaryotes.
         PTC refers to the peptidase transferase centre, a high conserved catalytic site across all the kingdoms of life that performs the translation of \gls{rna} to amino acid polypeptides.
-        After translation, the nascent peptide moves down the exit tunnel located in the larger ribosomal subunit.
+        After translation, the nascent peptide moves down the exit tunnel located in the larger ribosomal subunit (a simplified version of this channel is highlighted in red).
         There is evidence that the secondary structural elements of  \gls{tmh}s in ion channels are pre\--folded in the ribosomal exit tunnel \cite{Lu2005, Tu2010a, Tu2014, Kudva2018}.
         The ribosome hands the nascent chain to the translocon.
         Once the plug moves to expose the translocon pore, the translocon has a hydrophobic core which regulates the integration of the \gls{tmh} via the lateral gate \cite{Junne2010}.
