--- a/thesis.tex
+++ b/thesis.tex
@@ -101,11 +101,12 @@ This is in part due to the very features that make them so biologically influent
 
 By leveraging large data-sets of transmembrane proteins, this thesis is focused on characterising features of transmembrane \(\alpha\) helices en masse, particularly regarding their topology, membrane\---protein interactions, and intramembrane protein interactions.
 
-In this study, we present statistical evidence demonstrating the ``negative\--outside'' rule in opposition to the ``positive\--inside'' rule.
+In this study, we present statistical evidence demonstrating the `negative\--outside' rule in opposition to the `positive\--inside' rule.
 We also identify stabilising amino acid distributions in anchoring transmembrane helices compared to transmembrane helices with function beyond anchoring.
 
 Tail\--anchored proteins are a group of post\--translationally inserting proteins.
-In this thesis we show adaptations of residue distributions through the transmembrane helices of tail\--anchored proteins to different membrane environments within the cell (the mitochondria, endoplasmic reticulum, the Golgi, and the plasma membrane), but could not scrutinise a difference between global populations of tail\--anchored proteins in species (mammals, plants, and fungi).
+In this thesis we show adaptations of hydrophobicity and residue distributions through the transmembrane helices of tail\--anchored proteins to different membrane environments within the cell (the mitochondria, endoplasmic reticulum, the Golgi, and the plasma membrane).
+However, we could not scrutinise a hydrophobic difference between global populations of tail\--anchored proteins in different species (mammals, plants, and fungi).
 A handful of these proteins are capable of integrating into the membrane without the need for membrane integration proteins.
 Structural modelling of transmembrane helices from PTP1b and cytochrome b5 reveals a 3D amphipathic arrangement of residues.
 This structural feature may play a role in their spontaneous membrane insertion.
@@ -151,12 +152,12 @@ These findings will provide insight into the causes of some genetic diseases as 
 
 %The preface section doesn't like being in a different document for some reason. (I think it's just my compiler, there is no reason why it shouldn't work)
 \prefacesection{Acknowledgements}
-I would like to thank all members of both the Eisenhaber research group, as well as the Curtis and Warwicker research group for their interesting and engaging discussion throughout my PhD.
-In particular I would like to acknowledge the patience, guidance, and exceptional supervision from Dr Jim Warwicker, and Professor Stephen High of the University of Manchester and Dr Frank Eisenhaber, and Dr Birgit Eisenhaber, from the A*STAR in Singapore.
+I would like to thank all members of both the Eisenhaber research group, as well as the Curtis and Warwicker research group for their interesting and engaging discussions throughout my PhD.
+In particular I would like to acknowledge the patience, guidance, and exceptional supervision from Dr Jim Warwicker, and Professor Stephen High of the University of Manchester and Dr Frank Eisenhaber, and Dr Birgit Eisenhaber, from the Singapore Bioinformatics Institute.
 I also express my gratitude towards Dr Wing Cheong Wong and Dr Max Hebditch for working with me on many fiddly problems.
-I would also like to thank The University of Manchester and the ARAP programme at the Singapore Bioinformatics Institute for funding the project.
+I would also like to thank the University of Manchester and the ARAP programme at the A*STAR for funding the project.
 
-Outside of the office I thank my mother, father, my brother Tim, and Emily for their unwavering support of me in undertaking a PhD based for two years on the otherside of the planet.
+I thank my mother, father, my brother Tim, and Emily for their unwavering support of me in undertaking a PhD based for two years on the otherside of the planet.
 Being so far from my family and loved ones was certainly the most challenging part of this process.
 
 %It was my uncle Howard's wisdom and philosophical outlook that swayed me to undertake a PhD.
