added github links and authors to chapter 2

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -509,7 +509,7 @@ The TRAP complex facilitates the translocation of \gls{tmh}s by moderating the `
 TRAM, also called the translocating chain-associated membrane protein, is critical to the efficient translocation of \gls{tmp}s \cite{Voigt1996}, but has yet to be fully structurally solved \cite{Conti2015}.
 During translocation, the association between TRAM, TRAP and the Sec61 translocon is strengthened \cite{Conti2015}.
 
-Another group capable of Sec61 \gls{tmp} integration are the membrane\--bound Sec62 and Sec63 proteins in mammals which associate with Sec61 and facilitate membrane integration independently from the \gls{srp}\--ribosome complex \cite{Meyer2000}.
+Another group of proteins capable of Sec61 \gls{tmp} integration are the membrane\--bound Sec62 and Sec63 proteins in mammals which associate with Sec61 and facilitate membrane integration independently from the \gls{srp}\--ribosome complex \cite{Meyer2000}.
 Post translational translocation in this case involves ATP hydrolysis driven Hsp70 chaperones delivering the unfolded \gls{tmp} \cite{Chirico1988, Deshaies1988} to the Sec61\--Sec62\--Sec63 machinery \cite{Steel2004}.
 However, it was shown using crosslinking and co\--translational and post\--translational translocation assays that \gls{sr} displaces Sec62 which returns the Sec61 to the \gls{srp} dependent insertion pathway; Sec62 and ribosomal association with Sec61 is mutually exclusive \cite{Jadhav2015}.
 
