--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -216,6 +216,10 @@ We used the Welch's t\--test to scrutinise the means of the datasets without ass
 To examine any differences in the skew of the datasets, the Kruskal Wallis, and the Kolmogorov Smirnov tests were used.
 All these tests were performed using the Python scipy package \cite{Oliphant2007}.
 
+\subsection{Availability}
+
+The scripts and datasets associated with this study can be accessed at \url{https://github.com/JamesABaker/multipass_tmh_analysis}.
+
 
 \section{Results and discussion}
 
