--- a/chapter_tailanchor.tex
+++ b/chapter_tailanchor.tex
@@ -310,6 +310,9 @@ APBS as a PyMol plugin was used to map the electrostatic surface of the model \c
 Consurf \cite{Ashkenazy2010} was used to map the conservation scores based on 5 iterations of PSI-BLAST \cite{Altschul1997} with an E-value cut-off of 0.0001.
 Hydrophobicity was mapped according to the Eisenberg aggregated hydrophicity scale \cite{Eisenberg1984} using a script accessed at \url{https://pymolwiki.org/index.php/Color_h}.
 
+\subsection{Availability}
+
+The scripts and datasets associated with this study can be accessed at \url{https://github.com/JamesABaker/TA-protein-seq}.
 
 \section{Results and discussion}
 
