--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -41,7 +41,7 @@ These are the specific recognition of signal sequences on cargo proteins, the ta
 
 The prevailing view of membrane insertion by the translocon is that the \gls{tmh}s partition in the membrane one at a time as the translocon lateral gate opens, exposing the \gls{tmh} to the membrane (Figure \ref{fig:sequential-insertion})~\cite{Cymer2015}.
 
-\subsection{The ribosome-translocon complex in the biogenesis of membrane proteins.}
+\subsection{The ribosome-translocon complex in the biogenesis of membrane proteins}
 Ribosomes translate mRNA sequences into amino acid chains and are present in all living cells, and indeed the ribosomal complexes presence and activity is considered an important distinction in biology between ribosome\--encoding organisms and capsid encoding organisms \cite{Raoult2008}.
 They are a highly conserved \gls{rna}\--protein complex with a multitude of accessory proteins and targetting factors.
 
@@ -86,7 +86,7 @@ These proteins have a lumenal plug~\cite{Tam2005, Junne2006} and a constricted c
 During translocation the plug moves out of the pore \cite{Li2016}, the channel is in an open unconstricted state \cite{Junne2010}, and a lateral gate of TMH2 and TMH7 \cite{VandenBerg2004} periodically opens to release a \gls{tmh} to the membrane environment if sufficient hydrophobicity is present in the nascent peptide chain \cite{Niesen2018, Junne2010, Egea2010}(Figure \ref{fig:sequential-insertion}).
 
 
-\subsection{Cooperative transmembrane helix insertion by the translocon-ribosome complex.}
+\subsection{Cooperative transmembrane helix insertion by the translocon-ribosome complex}
 
 Early evidence of secondary structure folding of the $K_{v}$ ion channel showed that the S6 \gls{tmh} (referred to later in this study as TMH6) is indeed compacted in the ribosomal tunnel by using pegylation and calmodulation of the tagged cysteine-scanned S6 transmembrane segment \cite{Lu2005}.
 Furthermore, accessibility assays and an improved intramolecular  cross\--linking assay showed that the helical transmembrane S3\--S4 hairpin (the “paddle”) of a voltage-gated potassium ($K_{v}$) forms in the ribosome tunnel \cite{Tu2014}.
@@ -223,7 +223,7 @@ The scripts and datasets associated with this study can be accessed at \url{http
 
 \section{Results and discussion}
 
-\subsection{Large contrasts in transmembrane helix hydrophobicity occur in channels and receptors.}
+\subsection{Large contrasts in transmembrane helix hydrophobicity occur in channels and receptors}
 Large differences in sequenctially adjacent \gls{tmh}s could indicate cooperative insertion mechanisms of marginally hydrophobic \gls{tmh}s.
 In order to identify which type of \gls{tmp} may contain cooperative \gls{tmh}s, the hydrophobicities for \gls{tmh}s from 30045 records in a non-redundant version of SwissProt were calculated according to the Kyte \& Dolittle hydropathy scale \cite{Kyte1982}.
 The absolute difference between each sequentially adjacent \gls{tmh} was calculated.
@@ -445,7 +445,7 @@ This is compounded by the fact that the White and Wimley scale (used to generate
 \end{figure}
 
 
-\subsection{The prevalence of the high hydrophobic discrepancy of transmembrane helices amongst other common ``transporter'' transmembrane protein classes.}
+\subsection{The prevalence of the high hydrophobic discrepancy of transmembrane helices amongst other common ``transporter'' transmembrane protein classes}
 
 Whilst the gene ontology recognises ``transporters'' as having disproportionately more highly different hydrophobic sequential pairs, the list is predominantly ion channels, which are molecularly and functionally different from ion transporters.
 It also appears that ion transporters have no conserved hydrophobicity discrepancy between any of their \gls{tmh}s for the 4TMH, 6TMH, 8TMH, or 10TMH classes (Figure \ref{fig:other-groups-good-bad} C, D, E, F, G).
