--- a/thesis.tex
+++ b/thesis.tex
@@ -76,7 +76,7 @@
 \title{Investigating the Recognition and Interactions of Non-Polar \(\alpha\) Helices in Biology}
 \author{James Alexander Baker}
 \orcid{orcid.org/0000\--0003\--0874\--2298}
-\faculty{Chemistry}
+\faculty{Science and Engineering}
 \def\wordcount{63,689}
 
 
@@ -95,7 +95,7 @@
 
 \prefacesection{Abstract}
 Non\---polar helices feature prominently in structural biology.
-Transmembrane \(\alpha\) helix containing proteins make up around a quarter of all proteins, represent around 40\% of drug targets, and contain some of the most critical proteins required for life as we know it.
+Transmembrane \(\alpha\) helix containing proteins make up around a third of all proteins, represent around 40\% of drug targets, and contain some of the most critical proteins required for life as we know it.
 Yet they are fundamentally difficult to study experimentally.
 This is in part due to the very features that make them so biologically influential; their non\---polar transmembrane helical regions.
 
@@ -106,7 +106,7 @@ We also identify stabilising amino acid distributions in anchoring transmembrane
 
 Tail\--anchored proteins are a group of post\--translationally inserting proteins.
 In this thesis we show adaptations of hydrophobicity and residue distributions through the transmembrane helices of tail\--anchored proteins to different membrane environments within the cell (the mitochondria, endoplasmic reticulum, the Golgi, and the plasma membrane).
-However, we could not scrutinise a hydrophobic difference between global populations of tail\--anchored proteins in different species (mammals, plants, and fungi).
+However, we could not detect a hydrophobic difference between global populations of tail\--anchored proteins in different species (mammals, plants, and fungi).
 A handful of these proteins are capable of integrating into the membrane without the need for membrane integration proteins.
 Structural modelling of transmembrane helices from PTP1b and cytochrome b5 reveals a 3D amphipathic arrangement of residues.
 This structural feature may play a role in their spontaneous membrane insertion.
@@ -153,9 +153,10 @@ These findings will provide insight into the causes of some genetic diseases as 
 %The preface section doesn't like being in a different document for some reason. (I think it's just my compiler, there is no reason why it shouldn't work)
 \prefacesection{Acknowledgements}
 I would like to thank all members of both the Eisenhaber research group, as well as the Curtis and Warwicker research group for their interesting and engaging discussions throughout my PhD.
-In particular I would like to acknowledge the patience, guidance, and exceptional supervision from Dr Jim Warwicker, and Professor Stephen High of the University of Manchester and Dr Frank Eisenhaber, and Dr Birgit Eisenhaber, from the Singapore Bioinformatics Institute.
+In particular I would like to acknowledge the patience, guidance, and exceptional supervision from Dr Jim Warwicker of the University of Manchester as well as Dr Frank Eisenhaber and Dr Birgit Eisenhaber from the Singapore Bioinformatics Institute.
 I also express my gratitude towards Dr Wing Cheong Wong and Dr Max Hebditch for working with me on many fiddly problems.
-I would also like to thank the University of Manchester and the ARAP programme at the A*STAR for funding the project.
+I would also like to thank my advisor, Professor Stephen High, for his stimulating discussions and guidance throughout the project.
+I also thank the University of Manchester and the ARAP programme at the A*STAR for funding the project.
 
 I thank my mother, father, my brother Tim, and Emily for their unwavering support of me in undertaking a PhD based for two years on the otherside of the planet.
 Being so far from my family and loved ones was certainly the most challenging part of this process.
