--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,62 @@
+@article{Ruggiano2014,
+abstract = {Even with the assistance of many cellular factors, a significant fraction of newly synthesized proteins ends up misfolded. Cells evolved protein quality control systems to ensure that these potentially toxic species are detected and eliminated. The best characterized of these pathways, the ER-associated protein degradation (ERAD), monitors the folding of membrane and secretory proteins whose biogenesis takes place in the endoplasmic reticulum (ER). There is also increasing evidence that ERAD controls other ER-related functions through regulated degradation of certain folded ER proteins, further highlighting the role of ERAD in cellular homeostasis.},
+author = {Ruggiano, Annamaria and Foresti, Ombretta and Carvalho, Pedro},
+doi = {10.1083/jcb.201312042},
+file = {:home/james/Documents/Mendeley Desktop/Ruggiano, Foresti, Carvalho - 2014 - The Journal of cell biology - Quality control ER-associated degradation protein quality control and.pdf:pdf},
+issn = {1540-8140},
+journal = {The Journal of cell biology},
+month = {mar},
+number = {6},
+pages = {869--79},
+pmid = {24637321},
+publisher = {Rockefeller University Press},
+title = {{Quality control: ER-associated degradation: protein quality control and beyond.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/24637321 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3998802},
+volume = {204},
+year = {2014}
+}
+@article{Findlay2017,
+abstract = {Lipids play key roles in Biology. Mechanical properties of the lipid bilayer influence their neighbouring membrane proteins, however it is unknown whether different membrane protein properties have the same dependence on membrane mechanics, or whether mechanics are tuned to specific protein processes of the protein. We study the influence of lipid lateral pressure and electrostatic effects on the in vitro reconstitution, folding, stability and function of a representative of the ubiquitous major facilitator transporter superfamily, lactose permease. Increasing the outward chain lateral pressure in the bilayer, through addition of lamellar phosphatidylethanolamine lipids, lowers lactose permease folding and reconstitution yields but stabilises the folded state. The presence of phosphatidylethanolamine is however required for correct folding and function. An increase in headgroup negative charge through the addition of phosphatidylglycerol lipids favours protein reconstitution but is detrimental to topology and function. Overall the in vitro folding, reconstitution, topology, stability and function of lactose permease are found to have different dependences on bilayer composition. A regime of lipid composition is found where all properties are favoured, even if suboptimal. This lays ground rules for rational control of membrane proteins in nanotechnology and synthetic biology by manipulating global bilayer properties to tune membrane protein behaviour.},
+author = {Findlay, Heather E. and Booth, Paula J.},
+doi = {10.1038/s41598-017-13290-7},
+file = {:home/james/Documents/Mendeley Desktop/Findlay, Booth - 2017 - Scientific Reports - The folding, stability and function of lactose permease differ in their dependence on bilay.pdf:pdf},
+issn = {2045-2322},
+journal = {Scientific Reports},
+keywords = {Membrane biophysics,Permeation and transport,Protein folding},
+month = {dec},
+number = {1},
+pages = {13056},
+publisher = {Nature Publishing Group},
+title = {{The folding, stability and function of lactose permease differ in their dependence on bilayer lipid composition}},
+url = {http://www.nature.com/articles/s41598-017-13290-7},
+volume = {7},
+year = {2017}
+}
+@article{Kang2018,
+abstract = {Membrane proteins are involved in a diverse array of cellular functions and part of many important metabolic pathways. As such, they are attractive targets in the pharmaceutical and bio-based chemical industries. Despite their great potential, many challenges remain before membrane proteins gain widespread success in biotechnology. The two biggest issues are that expression of membrane proteins leads to inhibition of cellular growth and metabolism, and native membrane proteins often lack a desired function or specificity for use in engineered processes. To address these issues, protein engineering and synthetic biology approaches are leading the charge to develop membrane proteins for biotechnological applications. Here, we describe current methods for engineering membrane proteins and optimizing their expression levels in bacteria. We highlight success stories and describe challenges that still face this growing field.},
+author = {Kang, Min-Kyoung and Tullman-Ercek, Danielle},
+doi = {10.1016/J.YMETH.2018.04.014},
+issn = {1046-2023},
+journal = {Methods},
+month = {apr},
+publisher = {Academic Press},
+title = {{Engineering expression and function of membrane proteins}},
+url = {https://www.sciencedirect.com/science/article/pii/S1046202317304449?via{\%}3Dihub},
+year = {2018}
+}
+@incollection{Schuler2013,
+abstract = {Nanodiscs are self-assembled discoidal fragments of lipid bilayers 8-16 nm in diameter, stabilized in solution by two amphipathic helical scaffold proteins. As stable and highly soluble membrane mimetics with controlled lipid composition and ability to add affinity tags to the scaffold protein, nanodiscs represent an attractive model system for solubilization, isolation, purification, and biophysical and biochemical studies of membrane proteins. In this chapter we overview various approaches to structural and functional studies of different classes of integral membrane proteins such as ion channels, transporters, GPCR and other receptors, membrane enzymes, and blood coagulation cascade proteins which have been incorporated into nanodiscs. We outline the advantages provided by homogeneity, ability to control oligomerization state of the target protein and lipid composition of the bilayer. Special attention is paid to the opportunities afforded by nanodisc system for the detailed studies of the role of different lipid properties and protein-lipid interactions in the functional behavior of membrane proteins.},
+author = {Schuler, Mary A. and Denisov, Ilia G. and Sligar, Stephen G.},
+booktitle = {Methods in molecular biology (Clifton, N.J.)},
+doi = {10.1007/978-1-62703-275-9_18},
+issn = {1940-6029},
+pages = {415--433},
+pmid = {23404286},
+title = {{Nanodiscs as a New Tool to Examine Lipid–Protein Interactions}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/23404286 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC4201044 http://link.springer.com/10.1007/978-1-62703-275-9{\_}18},
+volume = {974},
+year = {2013}
+}
 @article{Conti2015,
 abstract = {The ER Sec61 translocon is a large macromolecular machine responsible for partitioning secretory and membrane polypeptides into the lumen, cytosol, and lipid bilayer. Because the Sec61 protein-conducting channel has been isolated in multiple membrane-derived complexes, we determined how the nascent polypeptide modulates translocon component associations during defined cotranslational translocation events. The model substrate preprolactin (pPL) was isolated principally with Sec61$\alpha$$\beta$$\gamma$ upon membrane targeting, whereas higher-order complexes containing OST, TRAP, and TRAM were stabilized following substrate translocation. Blocking pPL translocation by passenger domain folding favored stabilization of an alternate complex that contained Sec61, Sec62, and Sec63. Moreover, Sec62/63 stabilization within the translocon occurred for native endogenous substrates, such as the prion protein, and correlated with a delay in translocation initiation. These data show that cotranslational translocon contacts are ultimately controlled by the engaged nascent chain and the resultant substrate-driven translocation events.},
 author = {Conti, Brian J and Devaraneni, Prasanna K and Yang, Zhongying and David, Larry L and Skach, William R},
@@ -10980,11 +11039,11 @@ year = {2015}
 abstract = {Current interest in discovering life in other galaxies and in recreating life in artificial systems creates a desire to define the foundations of life. Naming and elucidating these fundamental principles, their operation, and why they are essential to life allows us to think differently about the goals and therapeutic approaches of current research. In this essay, [Koshland][1] defines the seven pillars of life as program, improvisation, compartmentalization, energy, regeneration, adaptability, and seclusion.$\backslash$r$\backslash$n$\backslash$r$\backslash$n [1]: http://www.sciencemag.org/cgi/content/full/295/5563/2215},
 author = {{Koshland Jr.}, D. E.},
 doi = {10.1126/science.1068489},
-file = {:home/james/Documents/Mendeley Desktop/Koshland Jr. - 2002 - Science - SPECIAL ESSAY The Seven Pillars of Life.pdf:pdf},
+file = {:home/james/Documents/Mendeley Desktop/Koshland Jr. - 2002 - Science - Special essay The seven pillars of life.pdf:pdf},
 isbn = {1095-9203 (Electronic)$\backslash$n0036-8075 (Linking)},
 issn = {00368075},
 journal = {Science},
-keywords = {Adaptation, Physiological,Animals,Biological Evolution,DNA,DNA: physiology,Energy Metabolism,Feedback, Physiological,Humans,Kinetics,Life,Origin of Life,Reproduction,Substrate Specificity,Terminology as Topic,Thermodynamics},
+keywords = {Adaptation,Animals,Biological Evolution,DNA,DNA: physiology,Energy Metabolism,Feedback,Humans,Kinetics,Life,Origin of Life,Physiological,Reproduction,Substrate Specificity,Terminology as Topic,Thermodynamics},
 language = {en},
 mendeley-groups = {ComEC manuscript,PhD manuscript},
 month = {mar},
@@ -10992,7 +11051,7 @@ number = {5563},
 pages = {2215--2216},
 pmid = {1000090725},
 publisher = {American Association for the Advancement of Science},
-title = {{SPECIAL ESSAY: The Seven Pillars of Life}},
+title = {{Special essay: The seven pillars of life}},
 url = {http://www.sciencemag.org/cgi/doi/10.1126/science.1068489},
 volume = {295},
 year = {2002}
