TA chapter revised

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -325,7 +325,7 @@ The overall $\Delta G$ for an ideal \gls{tmh} in the membrane is -12kcal${mol}^{
 
 Over the last 50 years or so, there have been many attempts to use hydrophobicity scales of residues to predict structural classifications of proteins.
 Due to the vast amounts of scales, major efforts have been made to compare them to identify which ones are better for which tasks of identifying structural elements~\cite{Simm2016, Peters2014}.
-Simm \textit{ et al.} 2016~\cite{Simm2016} compared 98 scales and found that the accuracy of a scale for secondary structure prediction depends on the spacing of the hydrophobicity values of certain amino acids but generally that the methods behind the scales don't affect the separation capacity between $ \beta $ sheets or $ \alpha $ helices.
+Simm \textit{ et al.} 2016~\cite{Simm2016} compared 98 scales and found that the accuracy of a scale for secondary structure prediction depends on the spacing of the hydrophobicity values of certain amino acids but generally that the methods behind the scales do not affect the separation capacity between $ \beta $ sheets or $ \alpha $ helices.
 
 Throughout this thesis, several scales are used to evaluate and estimate the hydrophobic values of peptide chains.
 All the scales aim for quantifying the hydrophobic values of each residue.
